# edu-data-vis

./: .gitignore  README.md  main.py  pyproject.toml  run.py  ~$rst_dataDes.docx
vis-back/: main.py
vis-front/: README.md  package-lock.json  package.json  vite.config.js
vis-front/src/: App.vue
vis-front/src/components/: DifficultUnreasonableChart.vue  GenderChart.vue  KnowledgeMasteryChart.vue  LangKnowledgeChart.vue  StateTimeMemoryChart.vue  StudentMajorAgeChart.vue  SubmitChart.vue  TitleChart.vue  TitleKnowledgeGraph.vue  TitleScoreChart.vue  UserProfileCharts.vue
